--- a/mysite/package.json
+++ b/mysite/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.9.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
